# ProjektRekrutacjaSolvro

./: .gitignore  README.md  pyproject.toml
Project/: tensorflow.ipynb  zadanie.ipynb
Project/WakacyjneWyzwanieSolvro/: AlexNet_model.ipynb  EfficientNet_model.ipynb  ResNet_model.ipynb  Swin_Transformer.ipynb  analiza_danych(final).ipynb
