[project]
name = "zadanierekrutacyjne"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "kaggle>=1.7.4.5",
    "kernel>=0.13.0",
    "matplotlib>=3.10.6",
    "pandas>=2.3.3",
    "split-folders>=0.5.1",
    "torch>=2.8.0",
    "torchvision>=0.23.0",
]
